<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/colorAccent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img"
        android:src="@drawable/img"
        android:layout_marginStart="90dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_welcome"
        android:layout_below="@id/img"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <EditText
        android:layout_below="@id/text_view_welcome"
        style="@style/EditText"
        android:id="@+id/code"
        android:layout_margin="8dp"
        android:hint="@string/edit_text_code"
        android:inputType="number"
        />



    <EditText
        android:layout_margin="8dp"
        android:id="@+id/password"
        style="@style/EditText"
        android:layout_below="@id/code"
        android:hint="@string/edit_text_pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/questionTV"
        android:text="@string/text_view_choose"
        android:textColor="@color/textColor"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        />
    <RadioGroup
        android:layout_centerHorizontal="true"
        android:id="@+id/studentOrProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/questionTV"
        android:layout_margin="5dp">

        <RadioButton

            android:id="@+id/student"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:buttonTint="@color/textColor"
            android:text="@string/radio_student"
            android:layout_marginEnd="10dp" />
        <RadioButton
            android:id="@+id/professor"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:buttonTint="@color/textColor"
            android:text="@string/radio_prof"
            android:layout_marginStart="10dp" />
    </RadioGroup>

    <Button
        style="@style/Button"
        android:background="@drawable/buttons"
        android:id="@+id/Login"
        android:text="@string/button_login"
        android:textColor="#fafafa"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/studentOrProfessor"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noAccountYet"
        android:text="@string/dont_have_account"
        android:layout_below="@id/Login"
        android:layout_margin="4dp"
        android:textColor="@color/cardview_dark_background"
        />
    <TextView
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createOne"
        android:text="@string/create_new_account"
        android:textColor="@color/textColor"
        android:layout_below="@id/Login"
        android:layout_toRightOf="@+id/noAccountYet"
        android:layout_toEndOf="@+id/noAccountYet" />


</RelativeLayout>